Update/fix events